@@ -8,11 +8,14 @@ import tech.minediamond.micanbt.SNBT.SNBT;
 import tech.minediamond.micanbt.SNBT.SNBTStyle;
 import tech.minediamond.micanbt.tag.*;
 
+import java.io.BufferedInputStream;
+import java.io.DataInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.zip.GZIPInputStream;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -36,33 +39,34 @@ public class RoundTripTest {
 
         CompoundTag tag = buildTag();
         NBT.write(tag, filePath);
-        CompoundTag read = (CompoundTag) NBTReader.builder(filePath).getTag();
+        CompoundTag read = (CompoundTag) NBT.fromPath(filePath).getTag();
         assertInstanceOf(CompoundTag.class, read);
 
         assertEquals(tag, read);
     }
-//
-//    @Test
-//    public void testNBTFileRoundTrip() throws IOException {
-//        Path filePath = tempDir.resolve("level.dat");
-//        byte[] originalBytes;
-//        Tag parsed;
-//        byte[] parsedBytes;
-//        try (InputStream inputStream = this.getClass().getResourceAsStream("/level.dat")
-//             ; InputStream buffer = new BufferedInputStream(inputStream)
-//             ; GZIPInputStream gzipInputStream = new GZIPInputStream(buffer)) {
-//            originalBytes = gzipInputStream.readAllBytes();
-//        }
-//
-//        try (InputStream inputStream = this.getClass().getResourceAsStream("/level.dat")
-//             ; InputStream buffer = new BufferedInputStream(inputStream)
-//             ; GZIPInputStream gzipInputStream = new GZIPInputStream(buffer)) {
-//            parsed = NBT.parse(gzipInputStream);
-//        }
-//        NBT.write((CompoundTag) parsed, filePath, false, false);
-//        parsedBytes = Files.readAllBytes(filePath);
-//        assertArrayEquals(originalBytes, parsedBytes);
-//    }
+
+    @Test
+    public void testNBTFileRoundTrip() throws IOException {
+        Path filePath = tempDir.resolve("level.dat");
+        byte[] originalBytes;
+        Tag parsed;
+        byte[] parsedBytes;
+        try (InputStream inputStream = this.getClass().getResourceAsStream("/level.dat")
+             ; InputStream buffer = new BufferedInputStream(inputStream)
+             ; GZIPInputStream gzipInputStream = new GZIPInputStream(buffer)) {
+            originalBytes = gzipInputStream.readAllBytes();
+        }
+
+        try (InputStream inputStream = this.getClass().getResourceAsStream("/level.dat")
+             ; InputStream buffer = new BufferedInputStream(inputStream)
+             ; GZIPInputStream gzipInputStream = new GZIPInputStream(buffer)
+             ; DataInputStream dataInput = new DataInputStream(gzipInputStream)) {
+            parsed = NBT.fromDataInput(dataInput).getTag();
+        }
+        NBT.write((CompoundTag) parsed, filePath, false, false);
+        parsedBytes = Files.readAllBytes(filePath);
+        assertArrayEquals(originalBytes, parsedBytes);
+    }
 
     @Test
     public void testSNBTFileRoundTrip() throws IOException {
